Fixed mobile layout issue + a few refinements

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,8 +75,8 @@
 }
 
 @theme inline {
-  /* updating font-sans to use Geist */
-  --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif;
+  /* updating font-sans to use Plus Jakarta Sans */
+  --font-sans: var(--font-plus-jakarta-sans), ui-sans-serif, system-ui, sans-serif;
   --font-mono: var(--font-geist-mono), ui-monospace, monospace;
   --color-background: var(--background);
   --color-foreground: var(--foreground);
